--- a/index.html
+++ b/index.html
@@ -3,10 +3,73 @@
 <head>
    <meta charset="UTF-8">
    <title>Platzigram</title>
+   <link href='https://fonts.googleapis.com/css?family=Montserrat|Oleo+Script' rel='stylesheet' type='text/css'>
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
+   <link rel="stylesheet" href="public/app.css">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-sacalable=no"/>
 </head>
 <body>
-   
+   <section id="main-container">
+      <div class="container">
+         <div class="row">
+            <div class="col s10 pus-s1">
+               <div class="row">
+                  <div class="col m5 hide-on-small-only">
+                     <img class="iphone" src="public/iphone.png">
+                  </div>
+                  <div class="col s12 m7">
+                     <div class="row">
+                        <div class="signup-box">
+                           <h1 class="platzigram">Platzigram</h1>
+                           <form class="signup-form">
+                              <h2>Registrate para ver fotos de tus amigos en Platzi</h2>
+                              <div class="section">
+                                 <a class="btn btn-fb hide-on-small-only">Iniciar sesion con Facebook</a>
+                                 <a class="btn btn-fb hide-on-med-and-up">Iniciar secion</a>
+                              </div>
+                              <div class="divider"></div>
+                              <div class="section">
+                                 <input type="email" name="email" placeholder="Correo electronico"></input>
+                                 <input type="text" name="name" placeholder="Nombre completo"></input>
+                                 <input type="text" name="username" placeholder="Nombre de usuario"></input>
+                                 <input type="password" name="password" placeholder="Contraseña"></input>
+                                 <button class="btn waves-effect wabes-light btn-signup" type="submit">Registrate</button>
+                              </div>
+                           </form>
+                        </div>
+                     </div>
+                     <div class="row">
+                        <div class>
+                           <div class="login-box">
+                              ¿Tienes una cuenta? <a href="signin">Entrar</a>
+                           </div>
+                        </div>
+                     </div>   
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+   </section>
+   <footer class="site-footer">
+      <div class="container">
+         <div class="row">
+            <div class="col s12 l3 center-align">
+              <a class='dropdown-button btn btn-flat' href='#' data-activates='dropdown1'>Idioma</a>
+
+              <ul id='dropdown1' class='dropdown-content'>
+                <li><a href="#!">Español</a></li>
+                <li><a href="#!">Ingles</a></li>
+              </ul>   
+            </div>
+            <div class="col s12 l3 push-l6 center-align">© 2016 Platzigram
+            </div>
+         </div>
+      </div>
+   </footer>
+   <script   src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"> 
+   </script>
+
 </body>
 </html>
